--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "mongodb": "^4.9.1",
     "mongoose": "^6.5.4",
     "multer": "^1.4.5-lts.1"
-  }
+  } ,
+  "builds": [
+     { "src": "index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+     { "src": "/(.*)", "dest": "/index.js" }
+  ]
 }
